<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    tools:context="jolliet.louis.blockbreaker.ScoreActivity">


    <TextView
        android:id="@+id/ScoreTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/game"
        android:gravity="center"
        android:text="@string/scores"
        android:textSize="70dp" />

    <TextView
        android:id="@+id/LevelTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/game"
        android:gravity="center"
        android:text="@string/level"
        android:textSize="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:orientation="vertical">


        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="305dp" />
    </LinearLayout>

    <Button
        android:id="@+id/Return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:theme="@style/Button"/>
</LinearLayout>

