<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    tools:context="jolliet.louis.blockbreaker.GameActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/game"
            android:text="@string/score"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/scoreResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/game"
            android:textSize="30dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bestScoreLabel"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/game"
            android:text="@string/bestScore"
            android:textSize="15dp"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/bestScoreResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/game"
            android:textSize="15dp" />
    </LinearLayout>


    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview"
        android:layout_width="wrap_content"
        android:layout_height="429dp" />

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scoreButton"
        android:theme="@style/Button" />
</LinearLayout>
